--- a/codes/options/train/train_SRResNet.yml
+++ b/codes/options/train/train_SRResNet.yml
@@ -2,11 +2,10 @@
 # With 16 Residual blocks w/o BN
 
 #### general settings
-name: 001_MSRResNetx4_scratch_DIV2K
-use_tb_logger: true
+name: audio
+use_tb_logger: false
 model: sr
 distortion: sr
-scale: 4
 gpu_ids: [0]
 
 #### datasets
@@ -14,30 +13,29 @@ datasets:
   train:
     name: DIV2K
     mode: LQGT
-    dataroot_GT: /mnt/SSD/xtwang/BasicSR_datasets/DIV2K800/DIV2K800_sub.lmdb
-    dataroot_LQ: /mnt/SSD/xtwang/BasicSR_datasets/DIV2K800/DIV2K800_sub_bicLRx4.lmdb
+    dataroot_GT: C:/Users/Jacob/Desktop/SuperResolution/BasicSR-Audio/data/test/GT
+    dataroot_LQ: C:/Users/Jacob/Desktop/SuperResolution/BasicSR-Audio/data/test/LQ
 
     use_shuffle: true
-    n_workers: 6  # per GPU
+    n_workers: 8
     batch_size: 16
-    GT_size: 128
+    GT_size: 131072
     use_flip: true
     use_rot: true
     color: RGB
   val:
     name: val_set5
     mode: LQGT
-    dataroot_GT: /mnt/SSD/xtwang/BasicSR_datasets/val_set5/Set5
-    dataroot_LQ: /mnt/SSD/xtwang/BasicSR_datasets/val_set5/Set5_bicLRx4
+    dataroot_GT: C:/Users/Jacob/Desktop/SuperResolution/BasicSR-Audio/data/test/GT
+    dataroot_LQ: C:/Users/Jacob/Desktop/SuperResolution/BasicSR-Audio/data/test/LQ
 
 #### network structures
 network_G:
   which_model_G: MSRResNet
-  in_nc: 3
-  out_nc: 3
+  in_nc: 2
+  out_nc: 2
   nf: 64
   nb: 16
-  upscale: 4
 
 #### path
 path:
